//buildscript {
//	ext {
//		springBootVersion = '2.4.0' //'2.3.0.RELEASE'
//	}
//	repositories {
//		mavenCentral()
//	}
//	dependencies {
//		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
//	}
//}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

//apply plugin: 'java'
//apply plugin: 'org.springframework.boot'
//apply plugin: 'io.spring.dependency-management'

group = 'com.example'
version = '1.0'
//sourceCompatibility = '1.8'
java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}
repositories {
	mavenCentral()
}

allprojects {
	tasks.withType(JavaCompile).tap {
		configureEach {
			options.compilerArgs << "-Xlint:deprecation"
		}
	}
}

dependencies {

	implementation project(':model')



	implementation "org.springframework.boot:spring-boot-starter-webflux"
	implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
	implementation "org.springframework.boot:spring-boot-starter-security"
	implementation "org.springframework.boot:spring-boot-starter-validation"
	implementation "org.springframework.boot:spring-boot-starter-data-r2dbc"

	implementation "org.springframework.data:spring-data-relational"

	implementation group: 'org.postgresql', name: 'r2dbc-postgresql', version: '1.0.7.RELEASE'

	runtimeOnly "org.postgresql:postgresql"


	implementation group: "io.jsonwebtoken", name: "jjwt-api", version: '0.12.3'
	implementation group: "io.jsonwebtoken", name: "jjwt-impl", version: '0.12.6'
	implementation group: "io.jsonwebtoken", name: "jjwt-jackson", version: '0.12.5'

	implementation "javax.persistence:javax.persistence-api:2.2"
	implementation "javax.validation:validation-api:2.0.1.Final"

	implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '4.0.2'

	implementation 'com.google.firebase:firebase-admin:9.4.3'
	implementation 'com.google.cloud:google-cloud-storage'

	compileOnly "org.projectlombok:lombok:$gradle.ext.lombokV"
	annotationProcessor "org.projectlombok:lombok:$gradle.ext.lombokV"

	testImplementation "io.projectreactor:reactor-test"
	testImplementation "org.springframework.security:spring-security-test"
	testImplementation "org.springframework.boot:spring-boot-starter-test"
	testImplementation group: 'junit', name: 'junit', version: '4.13.2'

	runtimeOnly group: 'org.springframework.boot', name: 'spring-boot-properties-migrator', version: '3.4.2'

}
